2012-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: print script output for backup with the
	  "| " prefix.

2012-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Missing return statement.

2012-12-03 Dan Locks <dwlocks@zmanda.com>
	* packaging/common/post_inst_functions.sh: add get_random_lines() and
	  use it to generate random passwords
	* packaging/common/test_sh_libs.sh: test and use get_random_lines(),
	  use static log file name, enforce order on tests using
	  (get_random_lines, create_gnupg, create_ampassphrase, and
	  create_amkey.
	* packaging/deb/postinst.src, packaging/rpm/amanda.spec.src,
	  packaging/sun-pkg/client/postinstall.src: use command -v instead of
	  unportable which.

2012-12-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/logfile.c (get_logline): Parse each line separately.

2012-11-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add a SRC-IP in the interface section.
	* common-src/conffile.h: Define INTER_SRC_IP.
	* man/xml-source/amanda.conf.5.xml: Add src-ip.
	* common-src/sockaddr-util.h: Define SU_SET_INADDR.
	* common-src/stream.c (stream_client_internal, stream_client_privileged,
	  stream_client_internal): Add a src_ip argument.
	* common-src/stream.h: Changed prototype,
	* client-src/sendbackup.c, common-src/bsd-security.c,
	  common-src/bsdtcp-security.c, common-src/security-util.c,
	  oldrecover-src/amrecover.c, oldrecover-src/extract_list.c: Use new
	  stream_client.
	* server-src/driverio.c (dumper_cmd): Add src-ip in PORT-WRITE command.
	* server-src/dumper.c: Parse src-ip.
	* server-src/server_util.c (amhost_get_security_conf): Return src-ip.

2012-11-28  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Force new connection after RequestTimeout.

2012-11-24 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec.src: fix comparison operator

2012-11-23  Jean-Louis Martineau <martineau@zmanda.com>